--- a/plugins/eulas/locale/be/webyast-licenses.po
+++ b/plugins/eulas/locale/be/webyast-licenses.po
@@ -4,53 +4,57 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
+"Project-Id-Version: YaST (@memory@)\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
 "PO-Revision-Date: 2006-01-04 08:58+0100\n"
 "Last-Translator: Alexander Nyakhaychyk <nyakhaychyk@gmail.com>\n"
 "Language-Team: Belarusian <i18n@suse.de>\n"
+"Language: be\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%"
-"10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
 msgstr ""
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
 #, fuzzy
-msgid "Accept End User License Agreement"
+#| msgid "License Agreement"
+msgid "Accept End User Licence Agreement"
 msgstr "Ліцэнзінае пагадненне"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr ""
-
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
+#: app/views/eulas/all_accepted.erb:37
 #, fuzzy
-msgid "License Agreement"
+#| msgid "License needs to be accepted"
+msgid "All licenses have already been accepted"
+msgstr "Неабходна прыняць ліцэнзію"
+
+#: app/views/eulas/show.html.erb:30
+#, fuzzy
+#| msgid "License Agreement"
+msgid "Licence Agreement"
 msgstr "Ліцэнзінае пагадненне"
 
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
+#: app/views/eulas/show.html.erb:50
 #, fuzzy
+#| msgid "I &Agree to the License Terms."
 msgid "Yes, I agree to the license agreement."
 msgstr "Я &згодны с умовамі ліцэнзіі"
 
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:54
 #, fuzzy
+#| msgid "I Do &Not Agree"
 msgid "No, I do not agree."
 msgstr "Я не згодны"
 
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
+#: app/views/eulas/show.html.erb:71
 #, fuzzy
+#| msgid "&Back"
 msgid "Back"
 msgstr "Назад"
 
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
-#, fuzzy
-msgid "All licenses have already been accepted"
-msgstr "Неабходна прыняць ліцэнзію"
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr ""
