--- a/plugins/eulas/locale/da/webyast-licenses.po
+++ b/plugins/eulas/locale/da/webyast-licenses.po
@@ -1,56 +1,51 @@
+# Martin Schlander <mschlander@opensuse.org>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
-"PO-Revision-Date: 2005-08-16 20:00+0200\n"
-"Last-Translator: Martin Møller <martin@martinm-76.dk>\n"
-"Language-Team: Dansk <da@li.org>\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2011-09-28 20:01+0200\n"
+"Last-Translator: Martin Schlander <mschlander@opensuse.org>\n"
+"Language-Team: Danish <opensuse-translation@opensuse.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.1\n"
+"X-Generator: Lokalize 1.2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
-msgstr ""
+msgstr "Du skal acceptere alle licensaftaler før brug af dette produkt!"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#, fuzzy
-msgid "Accept End User License Agreement"
-msgstr "_Acceptér aftale"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "Acceptér licensaftale for slutbrugere (EULA)"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-#, fuzzy
-msgid "There are no licenses to accept."
-msgstr "Der er ingen aktiverede tjenester angivet."
+#: app/views/eulas/all_accepted.erb:37
+msgid "All licenses have already been accepted"
+msgstr "Alle licenser er allerede blevet accepteret"
 
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
-#, fuzzy
-msgid "License Agreement"
-msgstr "_Acceptér aftale"
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
+msgstr "Licensaftale"
 
 # %s is either BOOTP or DHCP
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
-#, fuzzy
+#: app/views/eulas/show.html.erb:50
 msgid "Yes, I agree to the license agreement."
-msgstr "Licensaftalen fejlede"
+msgstr "Ja, jeg accepterer licensaftalen."
 
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
-msgstr ""
+msgstr "Nej, jeg accepterer ikke"
 
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
+#: app/views/eulas/show.html.erb:71
 msgid "Back"
 msgstr "Tilbage"
 
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
-#, fuzzy
-msgid "All licenses have already been accepted"
-msgstr "Alle tjenester blev genopfrisket."
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "Der er ingen licenser at acceptere."
 
 #, fuzzy
 #~| msgid "Available Processors"
