--- a/plugins/eulas/locale/el/webyast-licenses.po
+++ b/plugins/eulas/locale/el/webyast-licenses.po
@@ -1,50 +1,52 @@
+# Kostantinos Koudaras <warlordfff@gmail.com>, 2011.
+# Efstathios Iosifidis <iosifidis@opensuse.org>, 2011, 2012.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
-"PO-Revision-Date: 2005-08-24 17:53+0300\n"
-"Last-Translator: Hellenic SuSE Translation Team <hstg@billg.gr>\n"
-"Language-Team: Hellenic-Ελληνικά-Greek <hstg@billg.gr>\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2012-03-15 13:43+0200\n"
+"Last-Translator: Efstathios Iosifidis <iosifidis@opensuse.org>\n"
+"Language-Team: Ελληνικά, Σύγχρονα <opensuse-translation-el@opensuse.org>\n"
+"Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Content-Transfer-Encoding: 8bits\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
-msgstr ""
+msgstr "Πρέπει να αποδεχτείτε όλες τις άδειες πριν χρησιμοποιήσετε αυτό το προϊόν!"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
-msgstr ""
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "Αποδοχή άδειας χρήσης τελικού χρήστη"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr ""
+#: app/views/eulas/all_accepted.erb:37
+msgid "All licenses have already been accepted"
+msgstr "Όλες οι άδειες έχουν ήδη γίνει δεκτές"
 
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
-msgid "License Agreement"
-msgstr ""
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
+msgstr "Άδεια χρήσης"
 
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
+#: app/views/eulas/show.html.erb:50
 msgid "Yes, I agree to the license agreement."
-msgstr ""
+msgstr "Ναι, συμφωνώ με την άδεια χρήσης."
 
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
-msgstr ""
+msgstr "Όχι, δεν συμφωνώ."
 
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
+#: app/views/eulas/show.html.erb:71
 msgid "Back"
 msgstr "Επιστροφή"
 
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
-msgid "All licenses have already been accepted"
-msgstr ""
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "Δεν υπάρχουν άδειες προς αποδοχή."
 
 #, fuzzy
 #~| msgid "Available Processors"
