--- a/plugins/eulas/locale/fr/webyast-licenses.po
+++ b/plugins/eulas/locale/fr/webyast-licenses.po
@@ -1,48 +1,57 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# Fabien Crespel <fabien@crespel.net>, 2009, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui\n"
-"POT-Creation-Date: 2010-08-18 10:19+0200\n"
-"PO-Revision-Date: 2010-08-26 09:25\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2010-05-01 18:27+0200\n"
+"Last-Translator: Fabien Crespel\n"
+"Language-Team: French <opensuse-fr@opensuse.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: app/controllers/eulas_controller.rb:93 ./app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
-msgstr "Vous devez accepter toutes les licences avant d'utiliser ce produit !"
+msgstr "Vous devez accepter toutes les licences avant d'utiliser ce produit !"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: ./app/views/eulas/no_licenses.erb:1 ./app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
-msgstr "Accepter l'accord de licence"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "Accepter l'accord de licence Utilisateur Final"
 
-#: app/views/eulas/no_licenses.erb:2 ./app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr "Il n'y a aucune licence à accepter."
+#: app/views/eulas/all_accepted.erb:37
+msgid "All licenses have already been accepted"
+msgstr "Toutes les licences ont déjà été acceptées"
 
-#: app/views/eulas/show.html.erb:24 ./app/views/eulas/show.html.erb:24
-msgid "License Agreement"
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
 msgstr "Accord de licence"
 
-#: app/views/eulas/show.html.erb:42 ./app/views/eulas/show.html.erb:42
+#: app/views/eulas/show.html.erb:50
 msgid "Yes, I agree to the license agreement."
 msgstr "Oui, j'accepte l'accord de licence."
 
-#: app/views/eulas/show.html.erb:45 ./app/views/eulas/show.html.erb:45
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
 msgstr "Non, je n'accepte pas."
 
-#: app/views/eulas/show.html.erb:57 ./app/views/eulas/show.html.erb:57
+# TLABEL linuxrc_2002_03_29_0036__1
+#: app/views/eulas/show.html.erb:71
 msgid "Back"
 msgstr "Retour"
 
-#: app/views/eulas/all_accepted.erb:2 ./app/views/eulas/all_accepted.erb:2
-msgid "All licenses have already been accepted"
-msgstr "Toutes les licences ont déjà été acceptées."
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "Il n'y a aucune licence à accepter."
 
+#~ msgid "You cannot reject a license once it has been accepted!"
+#~ msgstr ""
+#~ "Vous ne pouvez pas rejeter un accord de licence une fois qu'il a été "
+#~ "accepté !"
+
+# TLABEL wizard_2002_03_14_2340__1
+#~ msgid "Available translations:"
+#~ msgstr "Traductions disponibles :"
