--- a/plugins/eulas/locale/hr/webyast-licenses.po
+++ b/plugins/eulas/locale/hr/webyast-licenses.po
@@ -1,52 +1,50 @@
 # Krešimir Jozić <kjozic@gmail.com>, 2009, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
 "PO-Revision-Date: 2010-04-16 19:36+0200\n"
 "Last-Translator: Krešimir Jozić <kjozic@gmail.com>\n"
 "Language-Team: Croatian <kde-i18n-doc@kde.org>\n"
+"Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Generator: Lokalize 1.0\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
 msgstr "Morate prihvatiti sve licence prije korištenja ovog proizvoda!"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
 msgstr "Licencni sporazum krajnjeg korisnika"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr "Nema licenci za prihvatiti."
+#: app/views/eulas/all_accepted.erb:37
+msgid "All licenses have already been accepted"
+msgstr "Sve licence su već prihvaćene"
 
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
-msgid "License Agreement"
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
 msgstr "Licencni sporazum"
 
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
+#: app/views/eulas/show.html.erb:50
 msgid "Yes, I agree to the license agreement."
 msgstr "Da, slažem se s licencnim sporazumom."
 
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
 msgstr "Ne, ne slažem se."
 
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
+#: app/views/eulas/show.html.erb:71
 msgid "Back"
 msgstr "Nazad"
 
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
-msgid "All licenses have already been accepted"
-msgstr "Sve licence su već prihvaćene"
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "Nema licenci za prihvatiti."
 
 #~ msgid "You cannot reject a license once it has been accepted!"
 #~ msgstr "Ne možete odbiti licencu nakon što je prihvaćena!"
