--- a/plugins/eulas/locale/ja/webyast-licenses.po
+++ b/plugins/eulas/locale/ja/webyast-licenses.po
@@ -1,48 +1,54 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# translation of yast_webclient_eulas.po to Japanese
+# Yasuhiko Kamata <belphegor@belbel.or.jp>, 2009, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui\n"
-"POT-Creation-Date: 2010-08-18 10:19+0200\n"
-"PO-Revision-Date: 2010-08-27 09:29\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: yast_webclient_eulas\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2010-04-15 21:54+0900\n"
+"Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
+"Language-Team: Japanese <opensuse-ja@opensuse.org>\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/eulas_controller.rb:93 ./app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
-msgstr "この製品を使用する前に、すべての使用許諾契約(EULA)に同意しなければなりません！"
+msgstr "この製品を使用する前に、全ての使用許諾契約 (EULA) に同意しなければなりません！"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: ./app/views/eulas/no_licenses.erb:1 ./app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
-msgstr "エンドユーザライセンス契約に同意する"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "使用許諾契約 (EULA) への同意"
 
-#: app/views/eulas/no_licenses.erb:2 ./app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr "同意する使用許諾契約がありません。"
+#: app/views/eulas/all_accepted.erb:37
+msgid "All licenses have already been accepted"
+msgstr "全ての使用許諾契約に同意しました"
 
-#: app/views/eulas/show.html.erb:24 ./app/views/eulas/show.html.erb:24
-msgid "License Agreement"
-msgstr "ライセンス契約"
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
+msgstr "ライセンス同意"
 
-#: app/views/eulas/show.html.erb:42 ./app/views/eulas/show.html.erb:42
+#: app/views/eulas/show.html.erb:50
 msgid "Yes, I agree to the license agreement."
-msgstr "はい、ライセンス契約に同意します。"
+msgstr "はい、ライセンス同意を受け入れます。"
 
-#: app/views/eulas/show.html.erb:45 ./app/views/eulas/show.html.erb:45
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
 msgstr "いいえ、同意しません。"
 
-#: app/views/eulas/show.html.erb:57 ./app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:71
 msgid "Back"
 msgstr "戻る"
 
-#: app/views/eulas/all_accepted.erb:2 ./app/views/eulas/all_accepted.erb:2
-msgid "All licenses have already been accepted"
-msgstr "すべての使用許諾契約がすでに同意されています"
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "同意すべき使用許諾契約はありません。"
 
+#~ msgid "You cannot reject a license once it has been accepted!"
+#~ msgstr "いったん同意した使用許諾契約を拒否することはできません！"
+
+#~ msgid "Available translations:"
+#~ msgstr "利用可能な翻訳:"
