--- a/plugins/eulas/locale/km/webyast-licenses.po
+++ b/plugins/eulas/locale/km/webyast-licenses.po
@@ -1,55 +1,57 @@
+# translation of yast_webclient_eulas.km.po to Khmer
+# Seng Sutha <sutha@khmeros.info>, 2010.
+# Khoem Sokhem <khoemsokhem@khmeros.info>, 2010.
+# Chan Sambathratanak <ratanak@khmeros.info>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: @PACKAGE@\n"
+"Project-Id-Version: yast_webclient_eulas.km\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2009-11-12 12:06+0100\n"
-"PO-Revision-Date: 2006-02-18 09:47+0700\n"
-"Last-Translator: Keo Sophon <keosophon@khmeros.info>\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2011-10-03 14:58+0700\n"
+"Last-Translator: Chan Sambathratanak <ratanak@khmeros.info>\n"
 "Language-Team: Khmer <support@khmeros.info>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: WordForge 0.8 RC1\n"
+"X-Language: km-KH\n"
 
-#: app/controllers/eulas_controller.rb:78
-msgid "You cannot reject a license once it has been accepted!"
-msgstr ""
-
-#: app/controllers/eulas_controller.rb:81
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
-msgstr ""
+msgstr "អ្នក​ត្រូវ​តែ​ព្រម​ទទួល​អាជ្ញាប័ណ្ណ​ទាំងអស់​ មុន​ពេល​​ប្រើ​ផលិត​ផល​នេះ !"
 
-#: app/views/eulas/show.html.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1
-#, fuzzy
-#| msgid "_Accept Agreement"
-msgid "Accept End User License Agreement"
-msgstr "យល់ព្រម​នឹង​កិច្ច​ព្រមព្រៀង"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "ព្រម​ទទួល​​​កិច្ច​ព្រមព្រៀង​អាជ្ញាប័ណ្ណ​របស់​អ្នក​ប្រើ"
 
-#: app/views/eulas/show.html.erb:4
-#, fuzzy
-#| msgid "Available Processors"
-msgid "Available translations:"
-msgstr "ខួរក្បាល​ដែល​មាន"
-
-#: app/views/eulas/show.html.erb:22
-#, fuzzy
-#| msgid "The license agreement failed"
-msgid "Yes, I agree to the license agreement."
-msgstr "បាន​បរាជ័យ​កិចព្រមព្រៀង​អាជ្ញាបណ្ណ"
-
-#: app/views/eulas/show.html.erb:28
-msgid "No, I do not agree."
-msgstr ""
-
-#: app/views/eulas/all_accepted.erb:2
-#, fuzzy
-#| msgid "All packages are already installed"
+#: app/views/eulas/all_accepted.erb:37
 msgid "All licenses have already been accepted"
-msgstr "កញ្ចប់​ទាំងអស់​គឺ​ត្រូវ​បាន​ដំឡើង"
+msgstr "​អាជ្ញាប័ណ្ណ​ទាំង​អស់​ត្រូវ​បាន​ព្រម​ទទួល​យក​​ហើយ"
 
-#: app/views/eulas/no_licenses.erb:2
-#, fuzzy
-#| msgid "There are no enabled services defined."
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
+msgstr "កិច្ចព្រមព្រៀង​អាជ្ញាប័ណ្ណ"
+
+#: app/views/eulas/show.html.erb:50
+msgid "Yes, I agree to the license agreement."
+msgstr "បាទ/ចាស ខ្ញុំ​យល់​ព្រមនឹង​​​កិច្ច​ព្រមព្រៀង​អាជ្ញាប័ណ្ណ ។"
+
+#: app/views/eulas/show.html.erb:54
+msgid "No, I do not agree."
+msgstr "ទេ ខ្ញុំ​មិន​យល់​ព្រម​ទេ​ ។"
+
+#: app/views/eulas/show.html.erb:71
+msgid "Back"
+msgstr "ថយក្រោយ"
+
+#: app/views/eulas/no_licenses.erb:36
 msgid "There are no licenses to accept."
-msgstr "មិនមាន​សេវា​​ដែល​បានបើក​ត្រូវ​បាន​កំណត់​ទេ ។"
+msgstr "មិន​មាន​អាជ្ញាប័ណ្ណ​​ដើម្បី​ព្រម​ទទួល​ទេ ។"
+
+#~ msgid "You cannot reject a license once it has been accepted!"
+#~ msgstr "អ្នក​មិនអាច​ច្រាន​ចោល​អាជ្ញាបណ្ណ​ នៅពេល​ដែល​វា​ត្រូ​វបាន​ទទួល​យក​បាន​ទេ !"
+
+#~ msgid "Available translations:"
+#~ msgstr "កា​របកប្រែ​ដែលមាន ៖"
