--- a/plugins/eulas/locale/lt/webyast-licenses.po
+++ b/plugins/eulas/locale/lt/webyast-licenses.po
@@ -3,58 +3,54 @@
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
-# Mindaugas Baranauskas <embar@users.berlios.de>, 2010.
+# Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>, 2010.
+# Mantas Kondrotas <dalelemanes@gmail.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
-"PO-Revision-Date: 2010-01-04 12:24+0200\n"
-"Last-Translator: Mindaugas Baranauskas <embar@users.berlios.de>\n"
-"Language-Team: Lithuanian <kde-i18n-doc@kde.org>\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2010-08-06 20:48+0300\n"
+"Last-Translator: Mantas Kondrotas <dalelemanes@gmail.com>\n"
+"Language-Team: Lithuanian <>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
 "X-Generator: Lokalize 1.0\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
-msgstr ""
-"Prieš naudodami šį produktą privalote sutikti su visomis licencijos "
-"sąlygomis!"
+msgstr "Prieš naudodami šį produktą privalote sutikti su visomis licencijos sąlygomis!"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
-msgstr "Sutikti su galutinio vartotojo licencijos sutarties sąlygomis"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "Sutikti su galutinio naudotojo licencijos sutarties sąlygomis"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr "Nėra jokių licencijų sąlygų, su kuriomis reiktų sutikti."
+#: app/views/eulas/all_accepted.erb:37
+msgid "All licenses have already been accepted"
+msgstr "Su visų licencijų sąlygomis buvo sutikta"
 
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
-#, fuzzy
-msgid "License Agreement"
-msgstr "Sutikti su galutinio vartotojo licencijos sutarties sąlygomis"
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
+msgstr "Licencijos sutartis"
 
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
+#: app/views/eulas/show.html.erb:50
 msgid "Yes, I agree to the license agreement."
 msgstr "Taip, aš sutinku su licencijos sąlygomis."
 
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
 msgstr "Ne, aš nesutinku."
 
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
+#: app/views/eulas/show.html.erb:71
 msgid "Back"
 msgstr "Atgal"
 
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
-msgid "All licenses have already been accepted"
-msgstr "Sutikta su visų licencijų sąlygomis"
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "Nėra licencijų sąlygų, su kuriomis reiktų sutikti."
 
 #~ msgid "You cannot reject a license once it has been accepted!"
 #~ msgstr "Sutikę su licencijos sąlygomis nebegalėsite persigalvoti!"
