--- a/plugins/eulas/locale/nl/webyast-licenses.po
+++ b/plugins/eulas/locale/nl/webyast-licenses.po
@@ -1,55 +1,59 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# translation of yast_webclient_eulas.nl.po to Dutch
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# Freek de Kruijf <freek@opensuse.org>, 2009, 2010, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: yast_webclient_eulas\n"
-"POT-Creation-Date: 2010-03-30 10:01+0200\n"
-"PO-Revision-Date: 2010-04-08 12:01\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: yast_webclient_eulas.nl\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2011-03-08 18:16-0400\n"
+"Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
+"Language-Team: Dutch <opensuse-nl@opensuse.org>\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Lokalize 1.1\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
-#: app/controllers/eulas_controller.rb:72
-msgid "You cannot reject a license once it has been accepted!"
-msgstr "U kunt geen licentie afwijzen als deze al is geaccepteerd!"
-
-#: app/controllers/eulas_controller.rb:75
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
 msgstr "U moet alle licenties accepteren alvorens dit product te gebruiken!"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
-msgstr "Eindgebruikerlicentieovereenkomst accepteren"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "Eindgebruikersovereenkomst accepteren"
 
-#: app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr "Er zijn geen licenties om te accepteren."
-
-#: app/views/eulas/show.html.erb:2
-msgid "License Agreement"
-msgstr "Licentieovereenkomst"
-
-#: app/views/eulas/show.html.erb:8
-msgid "Available translations:"
-msgstr "Beschikbare vertalingen:"
-
-#: app/views/eulas/show.html.erb:26
-msgid "Yes, I agree to the license agreement."
-msgstr "Ja, ik accepteer de licentieovereenkomst."
-
-#: app/views/eulas/show.html.erb:32
-msgid "No, I do not agree."
-msgstr "Nee, ik ga niet akkoord."
-
-#: app/views/eulas/show.html.erb:43
-msgid "Back"
-msgstr "Terug"
-
-#: app/views/eulas/all_accepted.erb:2
+#: app/views/eulas/all_accepted.erb:37
 msgid "All licenses have already been accepted"
 msgstr "Alle licenties zijn al geaccepteerd"
 
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
+msgstr "Licentieovereenkomst"
+
+#: app/views/eulas/show.html.erb:50
+msgid "Yes, I agree to the license agreement."
+msgstr "Ja, ik accepteer de licentieovereenkomst."
+
+#: app/views/eulas/show.html.erb:54
+msgid "No, I do not agree."
+msgstr "Nee, ik ga niet akkoord."
+
+#: app/views/eulas/show.html.erb:71
+msgid "Back"
+msgstr "Terug"
+
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "Er zijn geen licenties geaccepteerd."
+
+#~ msgid "You cannot reject a license once it has been accepted!"
+#~ msgstr "U kunt geen licentie afwijzen als deze al is geaccepteerd!"
+
+#~ msgid "Available translations:"
+#~ msgstr "Beschikbare vertalingen:"
