--- a/plugins/eulas/locale/pl/webyast-licenses.po
+++ b/plugins/eulas/locale/pl/webyast-licenses.po
@@ -3,50 +3,48 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
+"Project-Id-Version: yast_webclient_eulas\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
 "PO-Revision-Date: 2010-04-29 10:57+0100\n"
 "Last-Translator: Miroslaw Rogozinski <miroslaw.rogozinski@opensuse.biz>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Language-Team: i18n@suse.de\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
 msgstr "Należy zaakceptować wszystkie licencje, by móc używać tego produktu!"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
 msgstr "Akceptacja umowy licencyjnej użytkownika końcowego"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr "Brak licencji do zaakceptowania."
+#: app/views/eulas/all_accepted.erb:37
+msgid "All licenses have already been accepted"
+msgstr "Wszystkie licencje już zostały zaakceptowane"
 
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
-msgid "License Agreement"
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
 msgstr "Umowa licencyjna"
 
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
+#: app/views/eulas/show.html.erb:50
 msgid "Yes, I agree to the license agreement."
 msgstr "Tak, zgadzam się z warunkami umowy licencyjnej."
 
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
 msgstr "Nie, nie zgadzam się."
 
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
+#: app/views/eulas/show.html.erb:71
 msgid "Back"
 msgstr "Cofnij"
 
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
-msgid "All licenses have already been accepted"
-msgstr "Wszystkie licencje już zostały zaakceptowane"
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "Brak licencji do zaakceptowania."
 
 #~ msgid "You cannot reject a license once it has been accepted!"
 #~ msgstr "Nie można odrzucić wcześniej zaakceptowanej licencji!"
