--- a/plugins/eulas/locale/th/webyast-licenses.po
+++ b/plugins/eulas/locale/th/webyast-licenses.po
@@ -3,56 +3,61 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
+"Project-Id-Version: YaST (@memory@)\n"
 "Report-Msgid-Bugs-To: i18n@suse.de\n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
 "PO-Revision-Date: 2008-01-04 08:58+0100\n"
 "Last-Translator: i18n@suse.de\n"
 "Language-Team: Thai <i18n@suse.de>\n"
+"Language: th\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
 msgstr ""
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
 #, fuzzy
-msgid "Accept End User License Agreement"
+#| msgid "Accept or decline the license agreement."
+msgid "Accept End User Licence Agreement"
 msgstr "ยอมรับหรือปฏิเสธข้อตกลงเกี่ยวกับสิทธิ์การใช้งาน"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
+#: app/views/eulas/all_accepted.erb:37
 #, fuzzy
-msgid "There are no licenses to accept."
-msgstr "ไม่มีการเปลี่ยนแปลงที่จะบันทึก"
+#| msgid "License needs to be accepted"
+msgid "All licenses have already been accepted"
+msgstr "จะต้องทำการยอมรับเงื่อนไขสัญญาอนุญาตสิทธิ์เสียก่อน"
 
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
+#: app/views/eulas/show.html.erb:30
 #, fuzzy
-msgid "License Agreement"
+#| msgid "License Agreement"
+msgid "Licence Agreement"
 msgstr "สัญญาอนุญาตสิทธิ์"
 
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
+#: app/views/eulas/show.html.erb:50
 #, fuzzy
+#| msgid "&Yes, I Agree to the License Agreement"
 msgid "Yes, I agree to the license agreement."
 msgstr "ใช่ ฉันยอมรับเงื่อนไขในสัญญาอนุญาตสิทธิ์"
 
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
+#: app/views/eulas/show.html.erb:54
 msgid "No, I do not agree."
 msgstr ""
 
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
+#: app/views/eulas/show.html.erb:71
 #, fuzzy
+#| msgid "&Back"
 msgid "Back"
 msgstr "ย้อนกลับ"
 
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
+#: app/views/eulas/no_licenses.erb:36
 #, fuzzy
-msgid "All licenses have already been accepted"
-msgstr "จะต้องทำการยอมรับเงื่อนไขสัญญาอนุญาตสิทธิ์เสียก่อน"
+#| msgid "There are no changes to save."
+msgid "There are no licenses to accept."
+msgstr "ไม่มีการเปลี่ยนแปลงที่จะบันทึก"
 
 #, fuzzy
 #~| msgid "&Available Hosts:"
