--- a/plugins/eulas/locale/wa/webyast-licenses.po
+++ b/plugins/eulas/locale/wa/webyast-licenses.po
@@ -1,54 +1,53 @@
 # Translation into the walloon language.
 # Copyright (C) 2007 SUSE Linux Products GmbH.
-# Pablo Saratxaga <pablo@walon.org>, 2001, 2004.
-# Jean Cayron <jean.cayron@gmail.com>, 2007.
 #
+# Pablo Saratxaga <pablo@walon.org>, 2001, 2004.
+# Jean Cayron <jean.cayron@gmail.com>, 2007, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-licenses-ui 1.0.0\n"
-"POT-Creation-Date: 2010-08-02 09:19+0200\n"
-"PO-Revision-Date: 2004-04-05 17:37+0200\n"
+"Project-Id-Version: yast memory\n"
+"POT-Creation-Date: 2012-06-07 15:19+0200\n"
+"PO-Revision-Date: 2011-03-01 21:20+0100\n"
 "Last-Translator: Jean Cayron <jean.cayron@gmail.com>\n"
 "Language-Team: Walloon <i18n@suse.de>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Lokalize 1.2\n"
 
-#: app/controllers/eulas_controller.rb:93
-#: app/controllers/eulas_controller.rb:93
+#: app/controllers/eulas_controller.rb:122
 msgid "You must accept all licences before using this product!"
-msgstr ""
+msgstr "Vos dvoz accepter totes les licinces divant d' vos siervi di c' prodût ci !"
 
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-#: app/views/eulas/no_licenses.erb:1 app/views/eulas/all_accepted.erb:1
-msgid "Accept End User License Agreement"
-msgstr ""
+#: app/views/eulas/all_accepted.erb:26 app/views/eulas/no_licenses.erb:26
+msgid "Accept End User Licence Agreement"
+msgstr "Accepter l' acoird di licince di l' uzeu finå"
 
-#: app/views/eulas/no_licenses.erb:2 app/views/eulas/no_licenses.erb:2
-msgid "There are no licenses to accept."
-msgstr ""
-
-#: app/views/eulas/show.html.erb:37 app/views/eulas/show.html.erb:37
-msgid "License Agreement"
-msgstr ""
-
-#: app/views/eulas/show.html.erb:54 app/views/eulas/show.html.erb:54
-msgid "Yes, I agree to the license agreement."
-msgstr ""
-
-#: app/views/eulas/show.html.erb:57 app/views/eulas/show.html.erb:57
-msgid "No, I do not agree."
-msgstr ""
-
-#: app/views/eulas/show.html.erb:69 app/views/eulas/show.html.erb:69
-#, fuzzy
-msgid "Back"
-msgstr "Bouye di fond:"
-
-#: app/views/eulas/all_accepted.erb:2 app/views/eulas/all_accepted.erb:2
+#: app/views/eulas/all_accepted.erb:37
 msgid "All licenses have already been accepted"
-msgstr ""
+msgstr "Totes les licinces ont ddja stî acceptêyes"
+
+#: app/views/eulas/show.html.erb:30
+msgid "Licence Agreement"
+msgstr "Acoird di licince"
+
+#: app/views/eulas/show.html.erb:50
+msgid "Yes, I agree to the license agreement."
+msgstr "Oyi, dji so d' acoird avou l' acoird di licince."
+
+#: app/views/eulas/show.html.erb:54
+msgid "No, I do not agree."
+msgstr "Nonna, dji so nén d' acoird."
+
+#: app/views/eulas/show.html.erb:71
+msgid "Back"
+msgstr "Èn eri"
+
+#: app/views/eulas/no_licenses.erb:36
+msgid "There are no licenses to accept."
+msgstr "I gn a pont d' licince a accepter."
 
 #, fuzzy
 #~| msgid "Available Updates"
