--- a/plugins/firewall/locale/ar/webyast-firewall.po
+++ b/plugins/firewall/locale/ar/webyast-firewall.po
@@ -1,51 +1,53 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# mohammad <malham1@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: yast_webclient_firewall\n"
-"POT-Creation-Date: 2010-04-13 13:36+0200\n"
-"PO-Revision-Date: 2010-04-22 11:47\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: translation@suse.de\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-01-02 23:31+0300\n"
+"Last-Translator: mohammad <malham1@gmail.com>\n"
+"Language-Team: http://www.vertaal.com.ar/files/factory/ar/list/\n"
+"Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 && n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
+"X-Generator: Virtaal 0.7.0\n"
 
-#: app/controllers/firewall_controller.rb:51
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr "تمت كتابة إعدادات البريد."
+msgstr "تمت كتابة إعدادات جدار الحماية."
 
-#: app/views/firewall/index.rhtml:42
-msgid "Some of needed services are going to be blocked. WebYaST may not be usable anymore."
-msgstr "سيتم حظر بعض الخدمات المطلوبة. قد تكون WebYaST غير قابلة للاستخدام بعد الآن."
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "تمكين"
 
-#: app/views/firewall/index.rhtml:68
-msgid "Firewall"
-msgstr "جدار الحماية"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "تعطيل"
 
-#: app/views/firewall/index.rhtml:86
-msgid "General settings"
-msgstr "إعدادات عامة"
-
-#: app/views/firewall/index.rhtml:93
-msgid "Use Firewall"
-msgstr "جدار الحماية"
-
-#: app/views/firewall/index.rhtml:99
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
 msgstr "الخدمات المسموح بها"
 
-#: app/views/firewall/index.rhtml:103
-msgid "Block"
-msgstr "حظر"
-
-#: app/views/firewall/index.rhtml:109
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
-msgstr "خدمة nfslock"
+msgstr "الخدمات المحظورة"
 
-#: app/views/firewall/index.rhtml:113
-msgid "Allow"
-msgstr "سماح"
+#: app/views/firewall/index.html.erb:126
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "بعض الخدمات المطلوبة (%s) سوف يتم حظرها. WebYaST قد لا يكون صالح للاستعمال بعد الآن. هل تريد حقا منعها؟"
 
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "فضلاً انتظر"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "لم تقم بحفظ المتغيرات. هل تريد حفظ التغييرات؟"
+
+#~ msgid "Firewall"
+#~ msgstr "جدار الحماية"
+
+#~ msgid "Firewall settings"
+#~ msgstr "إعدادات جدار الحماية"
