--- a/plugins/firewall/locale/el/webyast-firewall.po
+++ b/plugins/firewall/locale/el/webyast-firewall.po
@@ -1,58 +1,65 @@
+# Kostantinos Koudaras <warlordfff@gmail.com>, 2011.
+# Efstathios Iosifidis <diamond_gr@freemail.gr>, 2011, 2012.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2005-08-24 17:53+0300\n"
-"Last-Translator: Hellenic SuSE Translation Team <hstg@billg.gr>\n"
-"Language-Team: Hellenic-Ελληνικά-Greek <hstg@billg.gr>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-01-20 22:40+0200\n"
+"Last-Translator: Efstathios Iosifidis <diamond_gr@freemail.gr>\n"
+"Language-Team: Ελληνικά, Σύγχρονα <opensuse-translation-el@opensuse.org>\n"
+"Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Content-Transfer-Encoding: 8bits\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: app/controllers/firewall_controller.rb:72
-#: app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr ""
+msgstr "Οι ρυθμίσεις του τοίχους προστασίας έχουν γραφτεί."
 
-#: app/views/firewall/index.rhtml:53 app/views/firewall/index.rhtml:53
-msgid ""
-"Some of needed services (%s) are going to be blocked. WebYaST may not be "
-"usable anymore. Do you really want to block them?"
-msgstr ""
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "Ενεργοποιημένο"
 
-#: app/views/firewall/index.rhtml:80 app/views/firewall/index.rhtml:80
-#: shortcuts.yml:6
-#, fuzzy
-msgid "Firewall"
-msgstr "SuSE Firewall 2"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "Απενεργοποιημένο"
 
-#: app/views/firewall/index.rhtml:98 app/views/firewall/index.rhtml:98
-#, fuzzy
-msgid "General settings"
-msgstr "Γενικές Ρυθμίσεις"
-
-#: app/views/firewall/index.rhtml:105 app/views/firewall/index.rhtml:105
-#, fuzzy
-msgid "Use Firewall"
-msgstr "SuSE Firewall 2"
-
-#: app/views/firewall/index.rhtml:110 app/views/firewall/index.rhtml:110
-#, fuzzy
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
-msgstr "Υπηρεσία inetd"
+msgstr "Επιτρεπόμενες υπηρεσίες"
 
-#: app/views/firewall/index.rhtml:120 app/views/firewall/index.rhtml:120
-#, fuzzy
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
-msgstr "Υπηρεσία nfslock"
+msgstr "Αποκλεισμένες υπηρεσίες"
 
-#: shortcuts.yml:7
-#, fuzzy
-msgid "Firewall settings"
-msgstr "Γενικές Ρυθμίσεις"
+#: app/views/firewall/index.html.erb:126
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "Μερικές από αναγκαίες υπηρεσίες (%s) πρόκειται να μπλοκαριστούν. Το WebYaST ίσως να μην μπορεί να χρησιμοποιηθεί πια. Θέλετε πραγματικά να τις μπλοκάρετε;"
+
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "Παρακαλώ περιμένετε."
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "Έχετε μη αποθηκευμένες αλλαγές. Θέλετε να αποθηκεύσετε τις αλλαγές;"
+
+#~ msgid "Firewall"
+#~ msgstr "Τοίχος προστασίας"
+
+#~ msgid "Firewall settings"
+#~ msgstr "Ρυθμίσεις τοίχου προστασίας"
+
+#~ msgid "Use Firewall"
+#~ msgstr "Χρήση τοίχους προστασίας  "
+
+#~| msgid "General Settings"
+#~ msgid "General settings"
+#~ msgstr "Γενικές Ρυθμίσεις "
 
 #, fuzzy
 #~| msgid "xlock"
