--- a/plugins/firewall/locale/es/webyast-firewall.po
+++ b/plugins/firewall/locale/es/webyast-firewall.po
@@ -1,51 +1,54 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# translation of webyast-firewall.es.po to Spanish
+# Spanish translations for PACKAGE package
+# Traducciones al español para el paquete PACKAGE.
+# Copyright (C) 2010 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
 #
+# Automatically generated, 2010.
+# Carlos E. Robinson M. <carlos.e.r@opensuse.org>, 2010, 2011, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:24\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: webyast-firewall.es\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-06-15 04:30+0200\n"
+"Last-Translator: Carlos E. Robinson <carlos.e.r@opensuse.org>\n"
+"Language-Team: Spanish <opensuse-translation-es@opensuse.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"X-Generator: KBabel 1.11.4\n"
 
-#: app/controllers/firewall_controller.rb:72 ./app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr "Se ha escrito la configuración del cortafuegos."
+msgstr "Se ha grabado la configuración del cortafuegos."
 
-#: app/views/firewall/index.rhtml:50 ./app/views/firewall/index.rhtml:50
-msgid "Please wait"
-msgstr "Espere"
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "Activado"
 
-#: app/views/firewall/index.rhtml:58 ./app/views/firewall/index.rhtml:58
-msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
-msgstr "Algunos de los servicios necesarios (%s) se van a bloquear. Es posible que WebYaST no se pueda usar nunca más. ¿Desea bloquearlos realmente?"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "Desactivado"
 
-#: app/views/firewall/index.rhtml:85 ./app/views/firewall/index.rhtml:85 ./shortcuts.yml:6
-msgid "Firewall"
-msgstr "Cortafuegos"
-
-#: app/views/firewall/index.rhtml:103 ./app/views/firewall/index.rhtml:103
-msgid "General settings"
-msgstr "Configuración general"
-
-#: app/views/firewall/index.rhtml:106 ./app/views/firewall/index.rhtml:106
-msgid "Use Firewall"
-msgstr "Usar cortafuegos"
-
-#: app/views/firewall/index.rhtml:116 ./app/views/firewall/index.rhtml:116
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
-msgstr "Servicios autorizados"
+msgstr "Servicios permitidos"
 
-#: app/views/firewall/index.rhtml:126 ./app/views/firewall/index.rhtml:126
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
 msgstr "Servicios bloqueados"
 
-#: ./shortcuts.yml:7
-msgid "Firewall settings"
-msgstr "Configuración del cortafuegos"
+#: app/views/firewall/index.html.erb:126
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "Algunos de los servicios necesarios (%s) van a ser bloqueados. WebYaST podría ya no ser usable. ¿Realmente quiere bloquearlos?"
+
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "Por favor, espere"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "Tiene cambios sin guardar. ¿Desea guardarlos?"
 
