--- a/plugins/firewall/locale/fr/webyast-firewall.po
+++ b/plugins/firewall/locale/fr/webyast-firewall.po
@@ -1,51 +1,64 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# Guillaume GARDET <guillaume.gardet@opensuse.org>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:25\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2011-09-27 16:18+0100\n"
+"Last-Translator: Guillaume GARDET <guillaume.gardet@free.fr>\n"
+"Language-Team: French <opensuse-fr@opensuse.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: app/controllers/firewall_controller.rb:72 ./app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr "Les paramètres de pare-feu ont été écrits."
+msgstr "Les paramètres du pare-feu ont été écrits."
 
-#: app/views/firewall/index.rhtml:50 ./app/views/firewall/index.rhtml:50
-msgid "Please wait"
-msgstr "Veuillez patienter"
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "Activé"
 
-#: app/views/firewall/index.rhtml:58 ./app/views/firewall/index.rhtml:58
-msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
-msgstr "Certains services requis (%s) sont sur le point d'être bloqués. WebYaST risque de ne plus être utilisable. Voulez-vous vraiment les bloquer ?"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "Desactivé"
 
-#: app/views/firewall/index.rhtml:85 ./app/views/firewall/index.rhtml:85 ./shortcuts.yml:6
-msgid "Firewall"
-msgstr "Pare-feu"
-
-#: app/views/firewall/index.rhtml:103 ./app/views/firewall/index.rhtml:103
-msgid "General settings"
-msgstr "Paramètres généraux"
-
-#: app/views/firewall/index.rhtml:106 ./app/views/firewall/index.rhtml:106
-msgid "Use Firewall"
-msgstr "Utiliser le pare-feu"
-
-#: app/views/firewall/index.rhtml:116 ./app/views/firewall/index.rhtml:116
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
 msgstr "Services autorisés"
 
-#: app/views/firewall/index.rhtml:126 ./app/views/firewall/index.rhtml:126
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
 msgstr "Services bloqués"
 
-#: ./shortcuts.yml:7
-msgid "Firewall settings"
-msgstr "Paramètres du pare-feu"
+#: app/views/firewall/index.html.erb:126
+msgid ""
+"Some of needed services (%s) are going to be blocked. WebYaST may not be "
+"usable anymore. Do you really want to block them?"
+msgstr ""
+"Certains services requis (%s) seront bloqués. WebYaST peut ne plus être "
+"accessible. Voulez-vous vraiment les bloquer ?"
 
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "Veuillez patienter"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr ""
+"Vous avez des modifications non sauvegardées. Voulez-vous les enregistrer ?"
+
+#~ msgid "Firewall"
+#~ msgstr "Pare-feu"
+
+#~ msgid "Firewall settings"
+#~ msgstr "Paramètres du pare-feu"
+
+#~ msgid "Use Firewall"
+#~ msgstr "Utiliser le pare-feu"
+
+#~ msgid "General settings"
+#~ msgstr "Paramètres généraux"
