--- a/plugins/firewall/locale/he/webyast-firewall.po
+++ b/plugins/firewall/locale/he/webyast-firewall.po
@@ -1,48 +1,51 @@
+# Ys, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-04-13 13:36+0200\n"
-"PO-Revision-Date: 2004-08-09 10:24+0200\n"
-"Last-Translator: xxx <yyy@example.org>\n"
-"Language-Team: Hebrew <i18n@suse.de>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2013-01-18 14:19+0200\n"
+"Last-Translator: Ys\n"
+"Language-Team: Hebrew <os-israel-main@lists.sourceforge.net>\n"
+"Language: he\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Lokalize 1.4\n"
 
-#: app/controllers/firewall_controller.rb:51
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr ""
+msgstr "הגדרות חומת אש נכתבו."
 
-#: app/views/firewall/index.rhtml:42
-msgid "Some of needed services are going to be blocked. WebYaST may not be usable anymore."
-msgstr ""
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "מאופשר"
 
-#: app/views/firewall/index.rhtml:68
-msgid "Firewall"
-msgstr ""
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "מבוטל"
 
-#: app/views/firewall/index.rhtml:86
-msgid "General settings"
-msgstr ""
-
-#: app/views/firewall/index.rhtml:93
-msgid "Use Firewall"
-msgstr ""
-
-#: app/views/firewall/index.rhtml:99
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
-msgstr ""
+msgstr "שרוצים מאושרים"
 
-#: app/views/firewall/index.rhtml:103
-msgid "Block"
-msgstr ""
-
-#: app/views/firewall/index.rhtml:109
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
-msgstr ""
+msgstr "שירותים חסומים"
 
-#: app/views/firewall/index.rhtml:113
-msgid "Allow"
-msgstr ""
+#: app/views/firewall/index.html.erb:126
+msgid ""
+"Some of needed services (%s) are going to be blocked. WebYaST may not be "
+"usable anymore. Do you really want to block them?"
+msgstr "חלק מהשירותים (%s) עומדים להחסם. WebYaST יכול לצאת מכלל שימוש. לחסום?"
+
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "אנא המתן"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "יש לך שינוים שלא נשמרו. לשמור שינוים אילו?"
+
+
