--- a/plugins/firewall/locale/ja/webyast-firewall.po
+++ b/plugins/firewall/locale/ja/webyast-firewall.po
@@ -1,51 +1,54 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# translation of webyast-firewall-ui.po to Japanese
+# Yasuhiko Kamata <belphegor@belbel.or.jp>, 2010, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: webyast-firewall-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-27 09:29\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2011-08-14 08:31+0900\n"
+"Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
+"Language-Team: Japanese <opensuse-ja@opensuse.org>\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/firewall_controller.rb:72 ./app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr "ファイアウォール設定はすでに保存されています。"
+msgstr "ファイアウオール設定を書き込みました。"
 
-#: app/views/firewall/index.rhtml:50 ./app/views/firewall/index.rhtml:50
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "有効"
+
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "無効"
+
+#: app/views/firewall/index.html.erb:74
+msgid "Allowed services"
+msgstr "許可するサービス"
+
+#: app/views/firewall/index.html.erb:88
+msgid "Blocked services"
+msgstr "ブロック済みサービス"
+
+#: app/views/firewall/index.html.erb:126
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "いくつかの必要なサービス (%s) がブロックされようとしています。 WebYaST は今後使用できなくなってしまうものと思われますが、よろしいですか？"
+
+#: app/views/firewall/index.html.erb:145
 msgid "Please wait"
 msgstr "しばらくお待ちください"
 
-#: app/views/firewall/index.rhtml:58 ./app/views/firewall/index.rhtml:58
-msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
-msgstr "必要なサービス(%s)の一部がブロックされます。WebYaSTを使用できなくなる可能性があります。それらをブロックしてもよろしいですか?"
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "保存されていない変更があります。変更を保存しますか？"
 
-#: app/views/firewall/index.rhtml:85 ./app/views/firewall/index.rhtml:85 ./shortcuts.yml:6
-msgid "Firewall"
-msgstr "ファイアウォール"
+#~ msgid "Firewall"
+#~ msgstr "ファイアウオール"
 
-#: app/views/firewall/index.rhtml:103 ./app/views/firewall/index.rhtml:103
-msgid "General settings"
-msgstr "一般的な設定"
-
-#: app/views/firewall/index.rhtml:106 ./app/views/firewall/index.rhtml:106
-msgid "Use Firewall"
-msgstr "ファイアウォールを使用"
-
-#: app/views/firewall/index.rhtml:116 ./app/views/firewall/index.rhtml:116
-msgid "Allowed services"
-msgstr "許可されるサービス"
-
-#: app/views/firewall/index.rhtml:126 ./app/views/firewall/index.rhtml:126
-msgid "Blocked services"
-msgstr "拒否されたサービス"
-
-#: ./shortcuts.yml:7
-msgid "Firewall settings"
-msgstr "ファイアウォール設定"
-
+#~ msgid "Firewall settings"
+#~ msgstr "ファイアウオール設定"
