--- a/plugins/firewall/locale/km/webyast-firewall.po
+++ b/plugins/firewall/locale/km/webyast-firewall.po
@@ -1,51 +1,62 @@
-# translation of yast_webclient_firewall.km.po to Khmer
+# translation of webyast-firewall-ui.km.po to Khmer
 # Khoem Sokhem <khoemsokhem@khmeros.info>, 2010.
+# Chan Sambathratanak <ratanak@khmeros.info>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: yast_webclient_firewall.km\n"
+"Project-Id-Version: webyast-firewall-ui.km\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2010-04-13 13:36+0200\n"
-"PO-Revision-Date: 2010-04-20 07:58+0700\n"
-"Last-Translator: Khoem Sokhem <khoemsokhem@khmeros.info>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2011-10-03 11:51+0700\n"
+"Last-Translator: Chan Sambathratanak <ratanak@khmeros.info>\n"
 "Language-Team: Khmer <support@khmeros.info>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: WordForge 0.8 RC1\n"
+"X-Language: km-KH\n"
 
-#: app/controllers/firewall_controller.rb:51
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
 msgstr "ការ​កំណត់​ជញ្ជាំង​ភ្លើង​ត្រូវ​បាន​សរសេរ ។"
 
-#: app/views/firewall/index.rhtml:42
-msgid "Some of needed services are going to be blocked. WebYaST may not be usable anymore."
-msgstr "សេវា​ដែល​បាន​ទាមទារ​មួយ​ចំនួន​កំពុង​ត្រូវ​បាន​ទប់ស្កាត់ ។ WebYaST មិនអាច​ប្រើ​បាន​ទៀត​ទេ ។"
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "បាន​បើក"
 
-#: app/views/firewall/index.rhtml:68
-msgid "Firewall"
-msgstr "ជញ្ជាំង​ភ្លើង"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "បាន​បិទ"
 
-#: app/views/firewall/index.rhtml:86
-msgid "General settings"
-msgstr "ការ​កំណត់​ទូទៅ"
-
-#: app/views/firewall/index.rhtml:93
-msgid "Use Firewall"
-msgstr "ប្រើ​ជញ្ជាំង​ភ្លើង"
-
-#: app/views/firewall/index.rhtml:99
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
-msgstr "សេវា​ដែលបាន​អនុញ្ញាត"
+msgstr "សេវា​ដែល​បាន​អនុញ្ញាត"
 
-#: app/views/firewall/index.rhtml:103
-msgid "Block"
-msgstr "ទប់ស្កាត់"
-
-#: app/views/firewall/index.rhtml:109
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
-msgstr "សេវា​ដែលបាន​ទប់ស្កាត់"
+msgstr "សេវា​ដែល​បាន​ទប់ស្កាត់"
 
-#: app/views/firewall/index.rhtml:113
-msgid "Allow"
-msgstr "អនុញ្ញាត"
+#: app/views/firewall/index.html.erb:126
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "សេវា​ដែល​បាន​ទាមទារ​មួយ​ចំនួន (%s) ​នឹង​ត្រូវ​បាន​ទប់ស្កាត់ ។ WebYaST ប្រហែល​ជា​មិន​អាច​ប្រើ​បាន​ទៀត​ទេ ។ តើ​អ្នក​ពិត​ជា​ចង់​ទប់ស្កាត់​ពួកវា​ឬ ?"
+
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "សូម​រង់ចាំ"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "អ្នក​មាន​ការ​ផ្លាស់ប្ដូរ​ដែល​មិន​បាន​រក្សាទុក ។ តើ​អ្នក​ចង់​រក្សាទុក​ការ​ផ្លាស់ប្ដូរ​របស់​អ្នក​ដែរ​ឬទេ ?"
+
+#~ msgid "Firewall"
+#~ msgstr "ជញ្ជាំង​ភ្លើង"
+
+#~ msgid "Firewall settings"
+#~ msgstr "ការ​កំណត់​ជញ្ជាំង​ភ្លើង"
+
+#~ msgid "Use Firewall"
+#~ msgstr "ប្រើ​ជញ្ជាំង​ភ្លើង"
+
+#~ msgid "General settings"
+#~ msgstr "ការ​កំណត់​ទូទៅ"
