--- a/plugins/firewall/locale/lt/webyast-firewall.po
+++ b/plugins/firewall/locale/lt/webyast-firewall.po
@@ -1,66 +1,72 @@
 # @TITLE@
 # Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 # This file is distributed under the same license as @PACKAGE@ package. FIRST
 #
+# Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>, 2010, 2011.
+# Mantas Kondrotas <dalelemanes@gmail.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui 1.0.0\n"
+"Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: translation@suse.de\n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2001-10-18 09:54+0200\n"
-"Last-Translator: Jonas Gocentas <jonasgocentas@florida.usa.com>\n"
-"Language-Team: Lithuanian <i18n@suse.de>\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2011-10-24 16:08+0300\n"
+"Last-Translator: Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>\n"
+"Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
+"Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n%"
-"100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 ? 0 : n%10==1 && n%100!=11 ? 1 : n%10>=2 && (n%100<10 || n%100>=20) ? 2 : 3);\n"
+"X-Generator: Lokalize 1.2\n"
 
-#: app/controllers/firewall_controller.rb:72
-#: app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr ""
+msgstr "Užkardos nuostatos buvo įrašytos."
 
-#: app/views/firewall/index.rhtml:53 app/views/firewall/index.rhtml:53
-msgid ""
-"Some of needed services (%s) are going to be blocked. WebYaST may not be "
-"usable anymore. Do you really want to block them?"
-msgstr ""
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "Įgalinta"
 
-#: app/views/firewall/index.rhtml:80 app/views/firewall/index.rhtml:80
-#: shortcuts.yml:6
-#, fuzzy
-msgid "Firewall"
-msgstr "SuSE Firewall 2"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "Uždrausta"
 
-#: app/views/firewall/index.rhtml:98 app/views/firewall/index.rhtml:98
-#, fuzzy
-msgid "General settings"
-msgstr "Bendri nustatymai"
-
-#: app/views/firewall/index.rhtml:105 app/views/firewall/index.rhtml:105
-#, fuzzy
-msgid "Use Firewall"
-msgstr "SuSE Firewall 2"
-
-#: app/views/firewall/index.rhtml:110 app/views/firewall/index.rhtml:110
-#, fuzzy
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
-msgstr "inetd paslauga"
+msgstr "Leidžiamos paslaugos"
 
-#: app/views/firewall/index.rhtml:120 app/views/firewall/index.rhtml:120
-#, fuzzy
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
-msgstr "nfslock paslauga"
+msgstr "Uždraustos paslaugos"
 
-#: shortcuts.yml:7
-#, fuzzy
-msgid "Firewall settings"
-msgstr "Bendri nustatymai"
+#: app/views/firewall/index.html.erb:126
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "Kai kurios reikalingos paslaugos (%s) bus uždraustos. WebYaST gali tapti nebetinkamu naudoti. Ar tikrai norite jas užblokuoti?"
 
-#, fuzzy
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "Palaukite"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "Kai kurie pakeitimai nebuvo įrašyti. Įrašyti pakeitimus?"
+
+#~ msgid "Firewall"
+#~ msgstr "Užkarda"
+
+#~ msgid "Firewall settings"
+#~ msgstr "Užkardos nuostatos"
+
+#~ msgid "Use Firewall"
+#~ msgstr "Naudoti užkardą"
+
+#~ msgid "General settings"
+#~ msgstr "Bendrosios nuostatos"
+
 #~| msgid "xlock"
 #~ msgid "Block"
-#~ msgstr "xlock"
+#~ msgstr "Uždrausti"
+
+#~ msgid "Allow"
+#~ msgstr "Leisti"
