--- a/plugins/firewall/locale/pt_BR/webyast-firewall.po
+++ b/plugins/firewall/locale/pt_BR/webyast-firewall.po
@@ -1,51 +1,78 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# Isis Binder <isis.binder@gmail.com>, 2010, 2012.
+# Luiz Fernando Ranghetti <elchevive@opensuse.org>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:31\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: yast_webclient_firewall\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-10-01 12:05-0300\n"
+"Last-Translator: Isis Binder <isis.binder@gmail.com>\n"
+"Language-Team: Brazilian Portuguese <opensuse-pt@opensuse.org>\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Lokalize 1.2\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
+"X-Poedit-Language: Portuguese\n"
+"X-Poedit-Country: BRAZIL\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
-#: app/controllers/firewall_controller.rb:72 ./app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr "As configurações de firewall já foram gravadas."
+msgstr "As configurações do firewall foram gravadas."
 
-#: app/views/firewall/index.rhtml:50 ./app/views/firewall/index.rhtml:50
-msgid "Please wait"
-msgstr "Aguarde"
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "Habilitado"
 
-#: app/views/firewall/index.rhtml:58 ./app/views/firewall/index.rhtml:58
-msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
-msgstr "Alguns dos serviços necessários (%s) serão bloqueados. Talvez o WebYaST fique inutilizável. Deseja realmente bloqueá-los?"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "Desabilitado"
 
-#: app/views/firewall/index.rhtml:85 ./app/views/firewall/index.rhtml:85 ./shortcuts.yml:6
-msgid "Firewall"
-msgstr "Firewall"
-
-#: app/views/firewall/index.rhtml:103 ./app/views/firewall/index.rhtml:103
-msgid "General settings"
-msgstr "Configurações gerais"
-
-#: app/views/firewall/index.rhtml:106 ./app/views/firewall/index.rhtml:106
-msgid "Use Firewall"
-msgstr "Usar Firewall"
-
-#: app/views/firewall/index.rhtml:116 ./app/views/firewall/index.rhtml:116
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
 msgstr "Serviços permitidos"
 
-#: app/views/firewall/index.rhtml:126 ./app/views/firewall/index.rhtml:126
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
 msgstr "Serviços bloqueados"
 
-#: ./shortcuts.yml:7
-msgid "Firewall settings"
-msgstr "Configurações de firewall"
+#: app/views/firewall/index.html.erb:126
+msgid ""
+"Some of needed services (%s) are going to be blocked. WebYaST may not be "
+"usable anymore. Do you really want to block them?"
+msgstr ""
+"Alguns dos serviços necessários (%s) serão bloqueados. O WebYaST pode não "
+"ser mais utilizável. Você realmente deseja bloqueá-los?"
 
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "Por favor, aguarde"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "Você possui alterações não salvas. Deseja salvar suas alterações?"
+
+#~ msgid "Firewall"
+#~ msgstr "Firewall"
+
+#~ msgid "Firewall settings"
+#~ msgstr "Configurações do firewall"
+
+#~ msgid "Use Firewall"
+#~ msgstr "Usar firewall"
+
+#~ msgid "General settings"
+#~ msgstr "Configurações gerais"
+
+#~ msgid "Block"
+#~ msgstr "Bloquear"
+
+#~ msgid "Allow"
+#~ msgstr "Permitir"
