--- a/plugins/firewall/locale/wa/webyast-firewall.po
+++ b/plugins/firewall/locale/wa/webyast-firewall.po
@@ -1,56 +1,62 @@
 # Translation into the walloon language.
 # Copyright (C) 2007 SUSE Linux Products GmbH.
-# Pablo Saratxaga <pablo@walon.org>, 2001, 2004.
-# Jean Cayron <jean.cayron@gmail.com>, 2007.
 #
+# Pablo Saratxaga <pablo@walon.org>, 2001, 2004.
+# Jean Cayron <jean.cayron@base.be>, 2007, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui 1.0.0\n"
-"POT-Creation-Date: 2010-08-02 09:18+0200\n"
-"PO-Revision-Date: 2004-04-05 17:37+0200\n"
-"Last-Translator: Jean Cayron <jean.cayron@gmail.com>\n"
-"Language-Team: Walloon <i18n@suse.de>\n"
+"Project-Id-Version: yast memory\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-08-19 14:58+0200\n"
+"Last-Translator: Jean Cayron <jean.cayron@base.be>\n"
+"Language-Team: Walloon <linux-wa@walon.org>\n"
+"Language: wa\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Lokalize 1.4\n"
 
-#: app/controllers/firewall_controller.rb:72
-#: app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr ""
+msgstr "Les tchuzes do côpe-feu ont stî scrîtes"
 
-#: app/views/firewall/index.rhtml:53 app/views/firewall/index.rhtml:53
-msgid ""
-"Some of needed services (%s) are going to be blocked. WebYaST may not be "
-"usable anymore. Do you really want to block them?"
-msgstr ""
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "E-n alaedje"
 
-#: app/views/firewall/index.rhtml:80 app/views/firewall/index.rhtml:80
-#: shortcuts.yml:6
-msgid "Firewall"
-msgstr ""
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "Essocté"
 
-#: app/views/firewall/index.rhtml:98 app/views/firewall/index.rhtml:98
-#, fuzzy
-msgid "General settings"
-msgstr "Apontiaedjes djenerås"
-
-#: app/views/firewall/index.rhtml:105 app/views/firewall/index.rhtml:105
-msgid "Use Firewall"
-msgstr ""
-
-#: app/views/firewall/index.rhtml:110 app/views/firewall/index.rhtml:110
-#, fuzzy
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
-msgstr "Tos les siervices SLP"
+msgstr "Siervices permetous"
 
-#: app/views/firewall/index.rhtml:120 app/views/firewall/index.rhtml:120
-#, fuzzy
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
-msgstr "Build Service"
+msgstr "Siervices blokés"
 
-#: shortcuts.yml:7
-#, fuzzy
-msgid "Firewall settings"
-msgstr "Apontiaedjes djenerås"
+#: app/views/firewall/index.html.erb:126
+msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
+msgstr "I gn a des siervices k' ons a dandjî (%s) ki vont-st esse blokés. WaibYaST pôreut n' pus aler. Voloz les bloker po do bon ?"
+
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "Tårdjîz s' i vs plait"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "Vos avoz des candjmints nén schapés. Voloz vs schaper vos candjmints ?"
+
+#~ msgid "Firewall"
+#~ msgstr "Côpe-feu"
+
+#~ msgid "Firewall settings"
+#~ msgstr "Apontiaedjes do côpe-feu"
+
+#~ msgid "Use Firewall"
+#~ msgstr "Eployî côpe-feu"
+
+#~ msgid "General settings"
+#~ msgstr "Apontiaedjes djenerås"
