--- a/plugins/firewall/locale/zh_CN/webyast-firewall.po
+++ b/plugins/firewall/locale/zh_CN/webyast-firewall.po
@@ -1,51 +1,75 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# @TITLE@
+# Copyright (C) 2006, SUSE Linux GmbH, Nuremberg
 #
+# This file is distributed under the same license as @PACKAGE@ package. FIRST
+#
+# hillwood <hillwoodroc@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-firewall-ui\n"
-"POT-Creation-Date: 2010-08-18 10:18+0200\n"
-"PO-Revision-Date: 2010-08-26 09:33\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: @PACKAGE@\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-11-21 00:23+0800\n"
+"Last-Translator: \n"
+"Language-Team: Chinese Simplified <kde-i18n-doc@kde.org>\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Lokalize 1.5\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
-#: app/controllers/firewall_controller.rb:72 ./app/controllers/firewall_controller.rb:72
+#: app/controllers/firewall_controller.rb:91
 msgid "Firewall settings have been written."
-msgstr "防火墙设置已写入。"
+msgstr "已写入防火墙设置。"
 
-#: app/views/firewall/index.rhtml:50 ./app/views/firewall/index.rhtml:50
-msgid "Please wait"
-msgstr "请稍候"
+#: app/views/firewall/index.html.erb:45 app/views/firewall/index.html.erb:49
+msgid "Enabled"
+msgstr "启用"
 
-#: app/views/firewall/index.rhtml:58 ./app/views/firewall/index.rhtml:58
-msgid "Some of needed services (%s) are going to be blocked. WebYaST may not be usable anymore. Do you really want to block them?"
-msgstr "部分所需服务 (%s) 将要被阻止。WebYaST 可能不再可用。是否真的要阻止它们？"
+#: app/views/firewall/index.html.erb:46 app/views/firewall/index.html.erb:50
+msgid "Disabled"
+msgstr "禁用"
 
-#: app/views/firewall/index.rhtml:85 ./app/views/firewall/index.rhtml:85 ./shortcuts.yml:6
-msgid "Firewall"
-msgstr "防火墙"
-
-#: app/views/firewall/index.rhtml:103 ./app/views/firewall/index.rhtml:103
-msgid "General settings"
-msgstr "常规设置"
-
-#: app/views/firewall/index.rhtml:106 ./app/views/firewall/index.rhtml:106
-msgid "Use Firewall"
-msgstr "使用防火墙"
-
-#: app/views/firewall/index.rhtml:116 ./app/views/firewall/index.rhtml:116
+#: app/views/firewall/index.html.erb:74
 msgid "Allowed services"
 msgstr "允许的服务"
 
-#: app/views/firewall/index.rhtml:126 ./app/views/firewall/index.rhtml:126
+#: app/views/firewall/index.html.erb:88
 msgid "Blocked services"
-msgstr "阻止的服务"
+msgstr "被屏蔽的服务"
 
-#: ./shortcuts.yml:7
-msgid "Firewall settings"
-msgstr "防火墙设置"
+#: app/views/firewall/index.html.erb:126
+msgid ""
+"Some of needed services (%s) are going to be blocked. WebYaST may not be "
+"usable anymore. Do you really want to block them?"
+msgstr "一些被需要的服务（%s）将要被屏蔽，WebYaST 可能不能正常使用。您真的想要把这些都屏蔽掉吗？"
 
+#: app/views/firewall/index.html.erb:145
+msgid "Please wait"
+msgstr "请稍候"
+
+#: app/views/firewall/index.html.erb:150
+msgid "You have unsaved changes. Do you want to save your changes?"
+msgstr "修改没有被保存，你要保存修改吗？"
+
+#~ msgid "Firewall"
+#~ msgstr "防火墙"
+
+#~ msgid "Firewall settings"
+#~ msgstr "防火墙设置"
+
+#, fuzzy
+#~| msgid "SuSE Firewall 2"
+#~ msgid "Use Firewall"
+#~ msgstr "SuSE Firewall 2"
+
+#, fuzzy
+#~| msgid "General Settings"
+#~ msgid "General settings"
+#~ msgstr "一般设置"
+
+#, fuzzy
+#~| msgid "xlock"
+#~ msgid "Block"
+#~ msgstr "xlock"
