--- a/plugins/kerberos/locale/es/webyast-kerberos.po
+++ b/plugins/kerberos/locale/es/webyast-kerberos.po
@@ -1,63 +1,66 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# translation of webyast-kerberos.es.po to Spanish
+# Spanish translations for PACKAGE package
+# Traducciones al español para el paquete PACKAGE.
+# Copyright (C) 2011 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
 #
+# Automatically generated, 2011.
+# Carlos E. Robinson <carlos.e.r@opensuse.org>, 2011, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-kerberos-ui\n"
-"POT-Creation-Date: 2010-08-18 10:19+0200\n"
-"PO-Revision-Date: 2010-08-26 09:24\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: webyast-kerberos.es\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2012-06-15 04:33+0200\n"
+"Last-Translator: Carlos E. Robinson <carlos.e.r@opensuse.org>\n"
+"Language-Team: Spanish <opensuse-translation-es@opensuse.org>\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"X-Generator: KBabel 1.11.4\n"
 
-#: app/controllers/kerberos_controller.rb:39 ./app/controllers/kerberos_controller.rb:39
+#: app/controllers/kerberos_controller.rb:30
 msgid "Cannot read Kerberos client configuraton."
-msgstr "No es posible leer la configuración del cliente Kerberos."
+msgstr "No se puede leer la configuración del cliente Kerberos."
 
-#: app/controllers/kerberos_controller.rb:55 ./app/controllers/kerberos_controller.rb:55
+#: app/controllers/kerberos_controller.rb:45
 msgid "Kerberos client configuraton successfully written."
-msgstr "La configuración del cliente de Kerberos se ha escrito correctamente."
+msgstr "La configuración del cliente Kerberos ha sido grabada exitosamente."
 
-#: app/controllers/kerberos_controller.rb:60 ./app/controllers/kerberos_controller.rb:60
+#: app/controllers/kerberos_controller.rb:47
 msgid "Error while saving Kerberos client configuration."
-msgstr "Error al guardar la configuración del cliente Kerberos."
+msgstr "Error al grabar la configuración del cliente Kerberos."
 
-#: app/views/kerberos/index.html.erb:33 ./app/views/kerberos/index.html.erb:33
+#: app/views/kerberos/index.html.erb:32
 msgid "This field is required."
-msgstr "Este campo es obligatorio."
+msgstr "Este campo es necesario."
 
-#: app/views/kerberos/index.html.erb:34 ./app/views/kerberos/index.html.erb:34
+#: app/views/kerberos/index.html.erb:33
 msgid "Enter a valid domain name or an IP address."
-msgstr "Introduzca un nombre de dominio válido o una dirección IP."
+msgstr "Introduzca un dominio válido o una dirección IP."
 
-#: app/views/kerberos/index.html.erb:64 ./app/views/kerberos/index.html.erb:64
+#: app/views/kerberos/index.html.erb:60
+msgid "Please wait"
+msgstr "Por favor, espere"
+
+#: app/views/kerberos/index.html.erb:78
 msgid "Kerberos client"
 msgstr "Cliente Kerberos"
 
-#: app/views/kerberos/index.html.erb:76 ./app/views/kerberos/index.html.erb:76
+#: app/views/kerberos/index.html.erb:91
 msgid "Enable Kerberos Authentication"
-msgstr "Habilitar la autenticación con Kerberos"
+msgstr "Activar autentificación Kerberos"
 
-#: app/views/kerberos/index.html.erb:79 ./app/views/kerberos/index.html.erb:79
+#: app/views/kerberos/index.html.erb:98
 msgid "Default Domain"
 msgstr "Dominio por defecto"
 
-#: app/views/kerberos/index.html.erb:83 ./app/views/kerberos/index.html.erb:83
+#: app/views/kerberos/index.html.erb:103
 msgid "Default Realm"
-msgstr "Realm por defecto"
+msgstr "Dominio (realm) por defecto"
 
-#: app/views/kerberos/index.html.erb:87 ./app/views/kerberos/index.html.erb:87
+#: app/views/kerberos/index.html.erb:108
 msgid "KDC Server Address"
 msgstr "Dirección del servidor KDC"
-
-#: ./shortcuts.yml:6
-msgid "Kerberos"
-msgstr "Kerberos"
-
-#: ./shortcuts.yml:7
-msgid "Configure Kerberos client"
-msgstr "Configurar cliente Kerberos"
 
