--- a/plugins/kerberos/locale/fr/webyast-kerberos.po
+++ b/plugins/kerberos/locale/fr/webyast-kerberos.po
@@ -1,63 +1,71 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
+# French translations for PACKAGE package.
+# Copyright (C) 2011 THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
 #
+# Automatically generated, 2011.
+# Guillaume GARDET <guillaume.gardet@opensuse.org>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: webyast-kerberos-ui\n"
-"POT-Creation-Date: 2010-08-18 10:19+0200\n"
-"PO-Revision-Date: 2010-08-26 09:25\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Project-Id-Version: webyast-kerberos-ui 1.0.0\n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2011-09-27 16:17+0100\n"
+"Last-Translator: Guillaume GARDET <guillaume.gardet@free.fr>\n"
+"Language-Team: French <opensuse-fr@opensuse.org>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Lokalize 1.0\n"
+"X-Poedit-Language: French\n"
 
-#: app/controllers/kerberos_controller.rb:39 ./app/controllers/kerberos_controller.rb:39
+#: app/controllers/kerberos_controller.rb:30
 msgid "Cannot read Kerberos client configuraton."
 msgstr "Impossible de lire la configuration du client Kerberos."
 
-#: app/controllers/kerberos_controller.rb:55 ./app/controllers/kerberos_controller.rb:55
+#: app/controllers/kerberos_controller.rb:45
 msgid "Kerberos client configuraton successfully written."
-msgstr "Succès de l'écriture de la configuration du client Kerberos."
+msgstr "La configuration du client Kerberos a été écrite avec succès."
 
-#: app/controllers/kerberos_controller.rb:60 ./app/controllers/kerberos_controller.rb:60
+#: app/controllers/kerberos_controller.rb:47
 msgid "Error while saving Kerberos client configuration."
 msgstr "Erreur lors de l'enregistrement de la configuration du client Kerberos."
 
-#: app/views/kerberos/index.html.erb:33 ./app/views/kerberos/index.html.erb:33
+#: app/views/kerberos/index.html.erb:32
 msgid "This field is required."
-msgstr "Ce champ est obligatoire."
+msgstr "Ce champ est requis."
 
-#: app/views/kerberos/index.html.erb:34 ./app/views/kerberos/index.html.erb:34
+# TLABEL linuxrc_2002_03_29_0036__48
+#: app/views/kerberos/index.html.erb:33
 msgid "Enter a valid domain name or an IP address."
-msgstr "Entrez un nom de domaine ou une adresse IP valide."
+msgstr "Entrer un nom de domaine valide ou une adresse IP."
 
-#: app/views/kerberos/index.html.erb:64 ./app/views/kerberos/index.html.erb:64
+#: app/views/kerberos/index.html.erb:60
+msgid "Please wait"
+msgstr "Veuillez patienter"
+
+#: app/views/kerberos/index.html.erb:78
 msgid "Kerberos client"
-msgstr "Client Kerberos"
+msgstr "Cleint Kerberos"
 
-#: app/views/kerberos/index.html.erb:76 ./app/views/kerberos/index.html.erb:76
+#: app/views/kerberos/index.html.erb:91
 msgid "Enable Kerberos Authentication"
 msgstr "Activer l'authentification Kerberos"
 
-#: app/views/kerberos/index.html.erb:79 ./app/views/kerberos/index.html.erb:79
+#: app/views/kerberos/index.html.erb:98
 msgid "Default Domain"
 msgstr "Domaine par défaut"
 
-#: app/views/kerberos/index.html.erb:83 ./app/views/kerberos/index.html.erb:83
+#: app/views/kerberos/index.html.erb:103
 msgid "Default Realm"
-msgstr "Zone (realm) par défaut"
+msgstr "Realm par défaut"
 
-#: app/views/kerberos/index.html.erb:87 ./app/views/kerberos/index.html.erb:87
+#: app/views/kerberos/index.html.erb:108
 msgid "KDC Server Address"
 msgstr "Adresse du serveur KDC"
 
-#: ./shortcuts.yml:6
-msgid "Kerberos"
-msgstr "Kerberos"
+#~ msgid "Kerberos"
+#~ msgstr "Kerberos"
 
-#: ./shortcuts.yml:7
-msgid "Configure Kerberos client"
-msgstr "Configurer le client Kerberos"
-
+#~ msgid "Configure Kerberos client"
+#~ msgstr "Configurer le client Kerberos"
