--- a/plugins/kerberos/locale/ja/webyast-kerberos.po
+++ b/plugins/kerberos/locale/ja/webyast-kerberos.po
@@ -1,63 +1,66 @@
-# Copyright (C) 2006 SuSE Linux Products GmbH, Nuernberg
-# This file is distributed under the same license as the package.
-#
+# translation of webyast-kerberos-ui.po to Japanese
+# Yasuhiko Kamata <belphegor@belbel.or.jp>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: webyast-kerberos-ui\n"
-"POT-Creation-Date: 2010-08-18 10:19+0200\n"
-"PO-Revision-Date: 2010-08-27 09:29\n"
-"Last-Translator: Novell Language <language@novell.com>\n"
-"Language-Team: Novell Language <language@novell.com>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2012-06-07 15:20+0200\n"
+"PO-Revision-Date: 2011-08-14 08:26+0900\n"
+"Last-Translator: Yasuhiko Kamata <belphegor@belbel.or.jp>\n"
+"Language-Team: Japanese <opensuse-ja@opensuse.org>\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: app/controllers/kerberos_controller.rb:39 ./app/controllers/kerberos_controller.rb:39
+#: app/controllers/kerberos_controller.rb:30
 msgid "Cannot read Kerberos client configuraton."
-msgstr "Kerberosクライアントの環境設定を読み込めません。"
+msgstr "Kerberos クライアントの設定を読み込めません。"
 
-#: app/controllers/kerberos_controller.rb:55 ./app/controllers/kerberos_controller.rb:55
+#: app/controllers/kerberos_controller.rb:45
 msgid "Kerberos client configuraton successfully written."
-msgstr "Kerberosクライアント環境設定が正常に書き込まれました。"
+msgstr "Kerberos クライアント設定が正しく書き込まれました。"
 
-#: app/controllers/kerberos_controller.rb:60 ./app/controllers/kerberos_controller.rb:60
+#: app/controllers/kerberos_controller.rb:47
 msgid "Error while saving Kerberos client configuration."
-msgstr "Kerberosクライアント環境設定の保存中にエラーが発生しました。"
+msgstr "Kerberos クライアントの設定を保存する際にエラーが発生しました。"
 
-#: app/views/kerberos/index.html.erb:33 ./app/views/kerberos/index.html.erb:33
+#: app/views/kerberos/index.html.erb:32
 msgid "This field is required."
-msgstr "このフィールドは必須です。"
+msgstr "この項目は必須です。"
 
-#: app/views/kerberos/index.html.erb:34 ./app/views/kerberos/index.html.erb:34
+#: app/views/kerberos/index.html.erb:33
 msgid "Enter a valid domain name or an IP address."
-msgstr "正しいドメイン名かIPアドレスを入力してください。"
+msgstr "正しいドメイン名、もしくは IP アドレスを入力してください。"
 
-#: app/views/kerberos/index.html.erb:64 ./app/views/kerberos/index.html.erb:64
+#: app/views/kerberos/index.html.erb:60
+msgid "Please wait"
+msgstr "お待ちください"
+
+#: app/views/kerberos/index.html.erb:78
 msgid "Kerberos client"
-msgstr "Kerberosクライアント"
+msgstr "Kerberos クライアント"
 
-#: app/views/kerberos/index.html.erb:76 ./app/views/kerberos/index.html.erb:76
+#: app/views/kerberos/index.html.erb:91
 msgid "Enable Kerberos Authentication"
-msgstr "Kerberos認証を有効にする"
+msgstr "Kerberos 認証の有効化"
 
-#: app/views/kerberos/index.html.erb:79 ./app/views/kerberos/index.html.erb:79
+#: app/views/kerberos/index.html.erb:98
 msgid "Default Domain"
-msgstr "デフォルトのドメインです"
+msgstr "既定のドメイン"
 
-#: app/views/kerberos/index.html.erb:83 ./app/views/kerberos/index.html.erb:83
+#: app/views/kerberos/index.html.erb:103
 msgid "Default Realm"
-msgstr "デフォルトのレルム(realm)です"
+msgstr "既定の領域"
 
-#: app/views/kerberos/index.html.erb:87 ./app/views/kerberos/index.html.erb:87
+#: app/views/kerberos/index.html.erb:108
 msgid "KDC Server Address"
-msgstr "KDCサーバのアドレス"
+msgstr "KDC サーバアドレス"
 
-#: ./shortcuts.yml:6
-msgid "Kerberos"
-msgstr "Kerberos"
+#~ msgid "Kerberos"
+#~ msgstr "Kerberos"
 
-#: ./shortcuts.yml:7
-msgid "Configure Kerberos client"
-msgstr "Kerberos クライアントを設定する"
-
+#~ msgid "Configure Kerberos client"
+#~ msgstr "Kerberos クライアントの設定"
